--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
+    "react-select-async-paginate": "^0.7.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
